--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^6.12.0",
     "@tolgee/react": "^6.2.6",
+    "@types/multer": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "daisyui": "^5.0.48",
     "date-fns": "^3.6.0",
+    "minio": "^8.0.5",
+    "multer": "^2.0.2",
     "mysql2": "^3.9.2",
     "next": "15.4.4",
     "next-auth": "^4.24.11",
