fix: add link package to dependencies and enhance TypeScript type handling for session in comments route

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "daisyui": "^5.0.48",
     "date-fns": "^3.6.0",
+    "link": "^2.1.1",
     "multer": "^2.0.2",
     "mysql2": "^3.9.2",
     "next": "15.4.4",
