--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "clsx": "^2.1.1",
     "daisyui": "^5.0.48",
     "date-fns": "^3.6.0",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.13.2",
     "link": "^2.1.1",
     "multer": "^2.0.2",
     "mysql2": "^3.9.2",
