--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "daisyui": "^5.0.48",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.1",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.13.2",
     "link": "^2.1.1",
