--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^17.2.1",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.13.2",
+    "framer-motion": "^12.23.12",
     "link": "^2.1.1",
     "multer": "^2.0.2",
     "mysql2": "^3.9.2",
