--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.51.0",
+    "react-markdown": "^10.1.0",
+    "rehype-external-links": "^3.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-breaks": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8",
